replaced String check isBlank() (JDK >= 11) with .trim().isEmpty() (conform to java 7, which is set in the gradle build config)
Signed-off-by: Philipp Seeger <philippbseeger@googlemail.com>